<resources>
    <string name="app_name" translatable="false">Suptraining</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="text_about">by Joanmi Bardera (c) 2015</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="elementtoken">element</string>
    <string name="tab1">Intro</string>
    <string name="tab2">Sessions</string>
    <string name="tab3">Stats</string>
    <string name="tab4">Config</string>
    <string name="element0">Stand-Up Paddle</string>
    <string name="element1">Swimming</string>
    <string name="element2">Running</string>
    <string name="element3">Push-ups</string>
    <string name="element4">Abdominals</string>
    <string name="element5">Sit-ups/Squats</string>
    <string name="element6">Pull-ups/Chin-ups</string>
    <string name="element7">Seated leg press</string>
    <string name="element8">Calf extension</string>
    <string name="element9">Leg curl</string>
    <string name="element10">Seated leg curl</string>
    <string name="element11">Back extension</string>
    <string name="element12">Chest press</string>
    <string name="element13">Fly</string>
    <string name="element14">Glute</string>
    <string name="element15">Hip aduction</string>
    <string name="element16">Pulldown</string>
    <string name="element17">Lateral raise</string>
    <string name="element18">Shoulder press</string>
    <string name="element19">Row/rear deltoid</string>
    <string name="element20">Leg extension</string>
    <string name="units">Units</string>
    <string name="meters">Meters</string>
    <string name="kms">Kms</string>
    <string name="pools">Pools</string>
    <string name="sum">SUM</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="undo">Undo</string>
    <string name="saving">Saving</string>
    <string name="session">Session</string>
    <string name="name">Name</string>
    <string name="increment">Increment</string>
    <string name="incrementshort">Inc</string>
    <string name="showonoff">Show</string>
    <string name="string1">Enter value</string>
    <string name="string2">NEW SESSION</string>
    <string name="string3">Session name</string>
    <string name="string4">session(s) deleted...</string>
    <string name="string5">Initializing data</string>
    <string name="string6">Reading data</string>
    <string name="string7">Add new item</string>
    <string name="string8">New values</string>
    <string name="string9">SESSION NOT SAVED</string>
    <string name="string10">Name of new item</string>
</resources>
