<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".Main$PlaceholderFragment">
    <LinearLayout
        android:id="@+id/cfgheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/listlines_margin"
        android:paddingRight="@dimen/listlines_margin"
        android:singleLine="true">
        <TextView
            android:id="@+id/hct1"
            android:layout_weight=".50"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/name"
            style="@android:style/TextAppearance.Medium"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/hct2"
            android:layout_weight=".17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/units"
            style="@android:style/TextAppearance.Medium"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/hct3"
            android:layout_weight=".13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/incrementshort"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:paddingRight="@dimen/listlines_margin"
            style="@android:style/TextAppearance.Medium"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/hct4"
            android:layout_width="54dp"
            android:layout_height="30dp"
            android:text="@string/showonoff"
            style="@android:style/TextAppearance.Medium"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/cftop"
        android:paddingTop="@dimen/buttons_margin"
        android:layout_below="@+id/cfgheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="1dp"
            android:drawSelectorOnTop="false" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/cffoot"
        android:layout_below="@+id/cftop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingLeft="@dimen/buttons_margin"
        android:paddingRight="@dimen/buttons_margin">
        <ImageButton
            android:id="@+id/baddni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:src="@drawable/ic_create_black_24dp"
            android:singleLine="true"/>
        <TextView
            android:id="@+id/lcname"
            android:paddingLeft="@dimen/buttons_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/string7"
            style="@android:style/TextAppearance.Medium"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/cfabld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchorGravity="bottom|right|end"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_save_white_36dp"/>
</RelativeLayout>
